WC-1 - Add raw template for 'restaurant map' page

--- a/cb-web-client/src/index.html
+++ b/cb-web-client/src/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+<meta charset="utf-8">
   <title>CbWebClient</title>
   <base href="/">
 
@@ -13,5 +15,7 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
+
+  <script src="http://maps.googleapis.com/maps/api/js"></script>
 </body>
 </html>
